--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
-:
-    - node_modules
+cache:
+  directories:
+  - node_modules
 language: node_js 
 node_js:
-    7 
+  7 
 branches:
-    only: 
-        - master 
-    script: 
-      - npm install 
-      - npm run build # build project
-    install:
-        npm install -g firebase-tools 
-    after_success:
-      - firebase use --token ${FIREBASE_TOKEN} 
-      - firebase use --add ${PROJECT_ID} 
-      - firebase deploy --non-interactive --token "${FIREBASE_TOKEN}" 
+  only: 
+  - master 
+script: 
+- npm install 
+- npm run build # build project
+install:
+  npm install -g firebase-tools 
+after_success:
+- firebase use --token ${FIREBASE_TOKEN} 
+- firebase use --add ${PROJECT_ID} 
+- firebase deploy --non-interactive --token "${FIREBASE_TOKEN}" 
