fix #1: add .eslintrc config files and dependencies.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "react-scripts": "1.0.7"
   },
   "dependencies": {
     "antd": "^2.12.2",
     "axios": "^0.16.2",
+    "eslint-config-standard": "^10.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-youtube": "^7.4.0",
