--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-youtube": "^7.4.0",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "react-router": "^4.2.0",
+    "react-ga": "^2.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
