--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-ga": "^2.3.4",
+    "react-github-fork-ribbon": "^0.5.0",
     "react-youtube": "^7.4.0",
-    "socket.io-client": "^2.0.3",
-    "react-ga": "^2.3.4"
+    "socket.io-client": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
