--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.6.1",
     "react-ga": "^2.3.4",
     "react-github-fork-ribbon": "^0.5.0",
+    "react-helmet": "^5.2.0",
     "react-youtube": "^7.4.0",
     "socket.io-client": "^2.0.3"
   },
