--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ branches:
   only:
   - master
 script:
-- npm install
-- npm run build # build project
+- yarn install
+- yarn run build # build project
 install:
-  npm install -g firebase-tools
+  yarn install -g firebase-tools
 after_success:
 - firebase use --token ${FIREBASE_TOKEN}
 - firebase use --add ${PROJECT_ID}
