--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.1",
     "react-scripts": "1.0.7",
+    "react-test-renderer": "^15.6.2",
     "styled-components": "^2.2.1"
   },
   "dependencies": {
