--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,17 @@
 {
-  "extends": "standard"
+  "parser": "babel-eslint",
+  "extends": ["standard", "standard-react"],
+    "plugins": [
+        "standard",
+        "promise"
+    ],
+    "rules": {
+      "jsx-quotes": ["error", "prefer-double"],
+      "space-before-function-paren": "off",
+      "comma-dangle": "off",
+      "indent": 0,
+      "no-undef": "off",
+      "react/prop-types": "off",
+      "no-unused-vars": "off"
+    }
 }
